# thermohl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  MANIFEST.in  MIGRATION_GUIDE.md  README.md  REUSE.toml  code_of_conduct.md  create_uvenv  create_virtualenv  pyproject.toml  renovate.json  sonar-project.properties
.github/workflows/: build-project.yml  cd-pypi.yml  cd-test-pypi.yml  publish.yml  reuse.yml  sonarcloud-analysis.yml  sonarcloud-build.yml  test-release-ci.yml
.reuse/templates/: copyright_header.jinja2
doc/: Makefile  conf.py  getting-started.rst  index.rst  make.bat  modules.rst  param-defval.rst  thermohl.rst
examples/: create_env  example_parameters_array.py  example_rain.py  example_solver_intensity.py  example_steady_1t.py  example_steady_3t.py  example_transient.py  example_transient2.py  example_transient_3t.py  plot_air_quantities.py  plot_circular_statistic.py  plot_power_terms.py  plot_skin_effect.py  plot_sun.py
src/thermohl/: __init__.py  default_uncertainties.yaml  distributions.py  logger.py  rain.py  sun.py  thermodynamics.py  uncertainties.py  utils.py
src/thermohl/power/: __init__.py  base.py  cigre.py  cner.py  convective_cooling.py  ieee.py  joule_heating.py  olla.py  power_term.py  radiative_cooling.py  solar_heating.py
src/thermohl/power/cigre/: __init__.py  air.py  convective_cooling.py  joule_heating.py  (+2 more)
src/thermohl/solver/: __init__.py  base.py  entities.py  heat_equation_enum.py  parameters.py  slv1d.py  slv1t.py  slv3t.py  slv3t_legacy.py  solver.py  solver_type.py
test/: test_ieee.py  test_log.py  test_power_cner.py  test_power_cner_integration.py  test_power_rte_integration.py  test_shape.py  test_solver1t.py  test_solver1t_balance.py  test_solver3t.py
test/functional_test/: cable_catalog.csv  functional_test.py  functional_test_steady.py  functional_test_transient.py  scenario.yaml  scenarios_steady.csv  scenarios_transient.csv  test_functional_steady.py  test_functional_transient.py
test/unit/: test_sun.py  test_utils.py
test/unit/power/: test_convective_cooling.py  test_power_base.py  test_power_cner.py  test_power_ieee.py  test_power_term.py  test_radiative_cooling.py  test_solar_heating.py
test/unit/solver/: test_base.py  test_slv1t.py  test_slv3t.py  test_solver3t_legacy.py
thermohl-docs/: mkdocs.yml  requirements.txt
thermohl-docs/docs/: examples.md  getting-started.md  index.md  refs.bib  user-guide.md
thermohl-docs/docs/api-reference/: parameters.md
thermohl-docs/docs/examples/: ex_all_params.ipynb  ex_ist_reduction.ipynb  ex_steady_1t.ipynb  ex_steady_3t.ipynb  ex_transient_3t.ipynb
thermohl-docs/docs/js/: math.js
(+74 files in other folders)
