# SPDX-FileCopyrightText: 2025 RTE (https://www.rte-france.com)
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = [
    "setuptools>=68.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "thermohl"
version = "2024.0.0"
authors = [
    { name = "Eurobios Mews Labs", email = "emmanuel.cieren@mews-labs.com" },
]
description = "Calculations relative to temperature and ampacity in overhead conductors."
license =  {text = "MPL-2.0"}
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0",
]
dependencies = [
    "numpy ~= 1.25.0",
    "pandas ~= 1.5.3",
    "scipy ~= 1.13.1",
    "pyyaml ~= 5.3.1",
]

[project.optional-dependencies]
doc = [
    "sphinx ~= 7.4.7",
    "sphinx_rtd_theme ~= 3.0.2"]
examples = [
    "matplotlib ~= 3.9.2",
] # openpyxl, seaborn
test = [
    "pytest ~= 7.2.2",
    "pylint ~= 3.3.1"
]
lint = [
    "mypy ~= 1.13.0",
    "ruff ~= 0.8.0"
]
dev = [
    "thermohl[test,lint]",
]

[project.urls]
"Homepage" = "https://github.com/phlowers/thermohl"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = false
#plugins = "numpy.typing.mypy_plugin"
